--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-
+.ipynb_checkpoints
 .DS_Store
+.idea
+hops
+**/.hw_api_key
+**/*.pkl
+**/**predict_example.py
+miniconda/
+.installed
+**/ca_chain
+**/certfile
+**/keyfile
+**/tmp*
+iris/iris_model
+**/**.pkl
+
